--- a/management_app/pubspec.yaml
+++ b/management_app/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   pay: ^2.0.0
   signalr_core: ^1.1.2
   awesome_notifications: ^0.10.0
+  cloudinary_flutter: ^1.3.0
+  cloudinary_url_gen: ^1.6.0
 
 dev_dependencies:
   flutter_test:
@@ -76,8 +78,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
