--- a/management_app/pubspec.yaml
+++ b/management_app/pubspec.yaml
@@ -39,7 +39,6 @@ dependencies:
   dotted_border: ^2.1.0
   intl: ^0.19.0
   fl_chart: ^0.68.0
-  shared_preferences: ^2.2.3
   http: ^1.1.0
   provider: ^6.1.2
   flutter_spinkit: ^5.2.1
@@ -52,8 +51,8 @@ dependencies:
   pay: ^2.0.0
   signalr_core: ^1.1.2
   awesome_notifications: ^0.10.0
-  cloudinary_flutter: ^1.3.0
-  cloudinary_url_gen: ^1.6.0
+  syncfusion_flutter_datepicker: ^27.2.5
+  calendar_view: ^1.3.0
 
 dev_dependencies:
   flutter_test:
