--- a/management_app/pubspec.yaml
+++ b/management_app/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   awesome_notifications: ^0.10.0
   syncfusion_flutter_datepicker: ^27.2.5
   calendar_view: ^1.3.0
+  elegant_notification: ^2.4.0
 
 dev_dependencies:
   flutter_test:
