--- a/nosh_now_application/pubspec.yaml
+++ b/nosh_now_application/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   pay: ^2.0.0
   signalr_core: ^1.1.2
   awesome_notifications: ^0.10.0
+  elegant_notification: ^2.4.0
 
 dev_dependencies:
   flutter_test:
